@@ -1594,6 +1594,21 @@ operator|.
 name|getDefault
 argument_list|()
 argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Date
+name|getNow
+parameter_list|()
+block|{
+return|return
+operator|new
+name|Date
+argument_list|()
+return|;
+block|}
+block|}
 decl_stmt|;
 block|}
 end_class
